Done styling; fixed a bug which caused overflow inside form without extending the body by changing unit from % to vh; Done styling input buttons

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* #region Generic Styling Start */
 * {
     margin: 0;
@@ -13,6 +17,12 @@ body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
+
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+    font-size: 1em;
 }
 
 /* #endregion Generic Styling End */
@@ -20,12 +30,12 @@ body {
 /* #region Main Div Styling */
 
 #bgDiv {
-    max-width: 30%;
+    max-width: 35vw;
     flex: 1;
 }
 
 #formDiv {
-    max-width: 70%;
+    max-width: 65vw;
     flex: 1;
 }
 
@@ -56,6 +66,11 @@ body {
     color: #fffffff2;
 
     background-color: #0000004f;
+
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 3em;
 }
 
 #credit {
@@ -76,16 +91,11 @@ body {
     display: flex;
     flex-direction: column;
 
-    justify-content: center;
-    align-items: flex-start;
-
-    /* padding: 0 0 0 5vw; */
-
     background-color: #f9fafb;
 }
 
 #heading {
-    max-height: 30%;
+    min-height: 30vh;
     flex: 1;
 
     padding: 0 0 0 5vw;
@@ -111,16 +121,104 @@ form {
     width: 100%;
 }
 
-form>div {
-    padding: 0 0 0 5vw;
+form>div:first-child {
+    background-color: white;
+    box-shadow: 0 4px 5px -2px gray;
+    padding: 5vh 5vw 7vh 5vw;
 }
 
-form>div:nth-child(1) {
-    background-color: white;
+form>div:last-child {
+    padding-left: 5vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 }
+
 
 li {
-    padding: 0.5em 0;
+    padding: 0 0 2em 0;
+    display: flex;
+    justify-content: space-between;
+
+    max-width: 50vw;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+li:last-child {
+    padding: 0;
+}
+
+li>div {
+    display: flex;
+    flex-direction: column;
+}
+
+ul>h2 {
+    padding-bottom: 5vh;
 }
 
 /* #endregion form styling */
+
+/* #region Input styling */
+
+input {
+    font: inherit;
+
+    padding: 0.2em 0.5em;
+    width: 15em;
+
+    appearance: none;
+
+    border: 1px solid #E5E7EB;
+    border-radius: 5px;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid #1d4ed8;
+    box-shadow: 4px 5px 7px -5px;
+}
+
+input:invalid {
+    border: 1px solid red;
+}
+
+button[type='submit'] {
+    border: none;
+    border-radius: 5px;
+    background-color: #09b2cf;
+
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1em;
+
+    padding: 1em 3em;
+    margin-bottom: 2em;
+    box-shadow: 4px 5px 7px -5px;
+
+
+    cursor: pointer;
+}
+
+button[type='submit']:hover {
+    background-color: #0099b3;
+}
+
+label {
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+
+    font-size: 1em;
+}
+
+#signIn {
+    text-decoration: none;
+    color: #09b2cf;
+    
+    font-weight: 700;
+}
+/* #endregion input styling */
